--- a/LockConfigurationTool/Controllers/Authentication/Login.storyboard
+++ b/LockConfigurationTool/Controllers/Authentication/Login.storyboard
@@ -11,7 +11,7 @@
         <!--Register Forget Controller-->
         <scene sceneID="hNP-2N-Pvu">
             <objects>
-                <tableViewController storyboardIdentifier="RegisterForgetController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Bdx-I7-p12" customClass="RegisterForgetController" customModule="LockConfigurationTool" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="RegisterForgetController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Bdx-I7-p12" customClass="RegisterForgetController" customModule="门锁安装助手" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fE6-me-WYy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -48,7 +48,7 @@
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                                 </textField>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3bC-TZ-2hh" customClass="CountdownButton" customModule="LockConfigurationTool" customModuleProvider="target">
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3bC-TZ-2hh" customClass="CountdownButton" customModule="门锁安装助手" customModuleProvider="target">
                                                                     <rect key="frame" x="274" y="12" width="100" height="32"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="100" id="TKB-02-2kA"/>
@@ -188,7 +188,7 @@
         <!--Login View Controller-->
         <scene sceneID="D3q-My-6mI">
             <objects>
-                <tableViewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="IUv-HC-SZi" customClass="LoginViewController" customModule="LockConfigurationTool" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="IUv-HC-SZi" customClass="LoginViewController" customModule="门锁安装助手" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="IOn-Yo-e2B">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
