--- a/LockConfigurationTool/Controllers/Business/Home/Home.storyboard
+++ b/LockConfigurationTool/Controllers/Business/Home/Home.storyboard
@@ -267,7 +267,7 @@
                                                         <constraint firstAttribute="height" constant="48" id="l2Y-nj-RYq"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                                                    <state key="normal" title="添加门锁">
+                                                    <state key="normal" title="添加">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
                                                     <userDefinedRuntimeAttributes>
