--- a/LockConfigurationTool/Controllers/Business/Home/Home.storyboard
+++ b/LockConfigurationTool/Controllers/Business/Home/Home.storyboard
@@ -67,7 +67,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Afb-Gz-K3w">
-                                                    <rect key="frame" x="16" y="8" width="46" height="20.5"/>
+                                                    <rect key="frame" x="16" y="8" width="58" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SN码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlo-sa-aVR">
                                                             <rect key="frame" x="0.0" y="0.0" width="33.5" height="20.5"/>
@@ -79,6 +79,12 @@
                                                             <rect key="frame" x="37.5" y="0.0" width="8.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                                             <color key="textColor" red="1" green="0.67843137249999996" blue="0.050980392159999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kbn-SV-SQI">
+                                                            <rect key="frame" x="50" y="0.0" width="8" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" name="textPrimary"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -300,6 +306,7 @@
                         <outlet property="phoneTextField" destination="6Xg-fw-9Es" id="I0A-Bt-nb7"/>
                         <outlet property="scanButton" destination="LKW-CP-UaR" id="mCK-Wb-r8r"/>
                         <outlet property="snTextField" destination="Jh1-E7-jev" id="Bmx-My-7mD"/>
+                        <outlet property="totalCount" destination="Kbn-SV-SQI" id="BLK-TT-m7x"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vu6-ko-KSO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
