修复小问题

--- a/LockConfigurationTool/Controllers/Business/InitialLock/InitialLock.storyboard
+++ b/LockConfigurationTool/Controllers/Business/InitialLock/InitialLock.storyboard
@@ -12,13 +12,13 @@
         <!--Select Lock Type Controller-->
         <scene sceneID="cz7-7g-E5J">
             <objects>
-                <tableViewController storyboardIdentifier="SelectLockTypeController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9Eq-A6-yoQ" customClass="SelectLockTypeController" customModule="门锁安装助手" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SelectLockTypeController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9Eq-A6-yoQ" customClass="SelectLockTypeController" customModule="门锁运维助手" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="tcF-tO-oBb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="listview"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SelectLockTypeCell" rowHeight="112" id="8gU-j5-BAX" customClass="SelectLockTypeCell" customModule="门锁安装助手" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SelectLockTypeCell" rowHeight="112" id="8gU-j5-BAX" customClass="SelectLockTypeCell" customModule="门锁运维助手" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="112"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8gU-j5-BAX" id="G6d-g5-Prd">
@@ -26,16 +26,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock_kf100" translatesAutoresizingMaskIntoConstraints="NO" id="Th2-29-Ta8">
-                                            <rect key="frame" x="20" y="10" width="44" height="92"/>
+                                            <rect key="frame" x="20" y="6" width="50" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="XqS-Ea-H5m"/>
+                                                <constraint firstAttribute="width" constant="50" id="br4-jP-AOF"/>
+                                            </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KF100 LOCK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zkl-6j-RhN">
-                                            <rect key="frame" x="80" y="34" width="94" height="19.5"/>
+                                            <rect key="frame" x="86" y="34" width="94" height="19.5"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <color key="textColor" name="textPrimary"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击进行绑定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Sg-b8-X8a">
-                                            <rect key="frame" x="80" y="61.5" width="86" height="17"/>
+                                            <rect key="frame" x="86" y="61.5" width="86" height="17"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                             <color key="textColor" name="textDescription"/>
                                             <nil key="highlightedColor"/>
@@ -71,7 +75,7 @@
         <!--Lock Start Scanning Controller-->
         <scene sceneID="tBs-rs-N9w">
             <objects>
-                <viewController storyboardIdentifier="LockStartScanningController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cAa-Dh-lFn" customClass="LockStartScanningController" customModule="门锁安装助手" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LockStartScanningController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cAa-Dh-lFn" customClass="LockStartScanningController" customModule="门锁运维助手" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fui-Eh-kqT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
